# smart-inventory-ai

./: .gitignore  CONTRIBUTING.md  README.md  build_exe.bat  build_release.bat  compile_cpp.bat  run_app.bat  setup.bat  start_all.bat
ai-service/: db_handler.py  local_model.py  main.py  nlp_parser.py  requirements.txt
cpp-engine/: CMakeLists.txt
cpp-engine/src/: analytics.cpp  analytics.h  main.cpp  matching.cpp  matching.h  reputation.cpp  reputation.h
database/: schema.sql
frontend/: pom.xml
frontend/src/main/java/com/smartinventory/: App.java  Launcher.java
frontend/src/main/java/com/smartinventory/controller/: MainController.java
frontend/src/main/java/com/smartinventory/model/: Dispute.java  InventoryItem.java  ParsedResult.java  Recommendation.java  Transaction.java  User.java
frontend/src/main/java/com/smartinventory/service/: ApiService.java  CppService.java  DatabaseService.java  LocalEngineService.java  NlpParser.java
frontend/src/main/resources/com/smartinventory/: main.fxml
frontend/src/main/resources/com/smartinventory/css/: styles.css
release/SmartInventoryAI-1.0.0/: README.txt  SmartInventoryAI.bat  download_ai_model.bat
